fix add icon invisible on small screens

--- a/scss/inyo.scss
+++ b/scss/inyo.scss
@@ -244,6 +244,7 @@ a {
     flex-direction: row;
     flex-grow: 1;
     justify-content: center;
+    padding-left: 5em;
 
     .main-wrapper {
       flex: auto 1;
